# ib-data-collect

./: .gitignore  Dockerfile  README.MD  README.md  aws-template.yaml  main.tf  outputs.tf  project.toml  pyproject.toml  requirements.txt  variables.tf  versions.tf
.run/: Listing exchanges.run.xml  Loading etf.run.xml  Loading fut.run.xml  Loading opt.run.xml  Loading stk fut etf fx cmdty ind.run.xml  Loading stk.run.xml  Local main with Function Frameworks.run.xml  load-ib.run.xml
app/: auth.py  ibdataloader.py  main.py  requirements.txt  services.py
app/templates/: index.html
deployment/: cluster-fargate-private-vpc.yml  template.sample.yml  template.yaml
reference-data/: eod-data-name-code-mapping-AMEX.txt  eod-data-name-code-mapping-NASDAQ.txt  eod-data-name-code-mapping-NYSE.txt
scripts/: googleapi.py  gservices-demo.py  gsheetsapi-demo.py  gspread-upload.py  load-ib-instruments.py  load-ib.py  twitter-demo.py  twitter-update.py
src/: gservices.py  ibdataloader.py  requirements.txt  taskpool.py  urlcaching.py
tests/: basic.py  test_caching.py  test_handler.py
